fieldx/tests/uncompilable/1.80/unused_builder.stderr
error: method `foo` is never used
 --> tests/uncompilable/unused_builder.rs:8:9
  |
3 | #[fxstruct(builder)]
  | -------------------- method in this implementation
...
8 |         builder(attributes_fn(deny(dead_code)))
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
note: the lint level is defined here
 --> tests/uncompilable/unused_builder.rs:8:36
  |
8 |         builder(attributes_fn(deny(dead_code)))
  |                                    ^^^^^^^^^
